--- a/projectWork/website-styles.css
+++ b/projectWork/website-styles.css
@@ -1,4 +1,7 @@
-        body {font-family: "Georgia", serif;}
+        body {
+            font-family: 'Quicksand', sans-serif;
+            margin: 0;
+        }
         .header {
             background-color: rgb(13, 13, 85);
             color: #ffffff;
@@ -26,13 +29,16 @@
             justify-content: center;
             padding: 10px;
             }
+        .leftflex, .leftflex2 {
+            max-width: 100%;
+        }
         .righttop, .rightbot, .righttop2, .rightbot2 {
             display: flex;
             padding: 15px;
             flex-wrap: wrap;
         }
         .rightbot {
-            padding-top: 26px;
+            padding-top: 29px;
         }
         .rightbot2 {
             padding-top: 33px;
@@ -40,29 +46,40 @@
         .righttop, .righttop2 {
             padding-top: 10px;
         }
+        .bigPic, .bigPic2 {
+            width: 850px;
+            max-width: 100%;
+        }
+        .smallTop, .smallBottom, .smallTop2, .smallBottom2 {
+            max-width: 400px;
+        }
         @media only screen and (max-width: 1322px) {
             .righttop, .rightbot, .righttop2, .rightbot2 {
                 display: inline;
+                width: 30%;
+                margin: 0 auto;
             }
         }
-        .section1, .section2 {
+        .welcome-section, .covered-section {
                 flex-wrap: wrap;
                 display: flex;
                 justify-content: center;
                 color: #ffffff;
                 padding: 10px;
             }
-        .section1 {
+        .welcome-section {
             background-image: url(../images/projectPics/p4-banner.png);
+            padding: 30px;
         }
-        .section2 {
+        .covered-section {
             background-image: url(../images/projectPics/i2-banner.png);
+            padding: 30px;
         }
         .welcome {
             padding-right: 85px;
             padding-left: 85px;
         }
-        .section2 a, .section1 a {
+        .welcome-section a, .covered-section a {
             display: flex;
             justify-content: center ;
             color: #ffffff;
@@ -93,4 +110,92 @@
         }
         .info {
             padding: 10px;
+        }
+        /*info page css below*/
+        .page2 {
+            color: rgb(13, 13, 85);
+        }
+        .nickBox {
+            padding-top: 30px;
+        }
+        .nick{
+            font-size: 35px;
+            text-decoration: underline;
+        }
+        .nickImage {
+            float: left;
+            padding-left: 20px;
+        }
+        .nickInfo {
+            padding-top: 15px;
+        }
+        .nickDisc {
+            line-height: 2;
+            font-size: 20px;
+        }
+        .nick, .nickDisc {
+            display: flex;
+            padding-left: 30px;
+            padding-right: 30px;
+        }
+        .johnBox {
+            clear: both;
+        }
+        .john{
+            font-size: 35px;
+            text-decoration: underline;
+            justify-content: flex-end;
+        }
+        .johnImage {
+            float: right;
+            padding-right: 20px;
+            padding-bottom: 30px;
+        }
+        .johnInfo {
+            padding-top: 15px;
+        }
+        .johnDisc {
+            line-height: 2;
+            font-size: 20px;
+        }
+        .john, .johnDisc {
+            display: flex;
+            padding-right: 30px;
+            padding-left: 30px;
+        }
+        .ourStorySection {
+            clear: both;
+        }
+        .aboutUs {
+            display: flex;
+            justify-content: center;
+            font-size: 30px;
+            background-image: url(../images/projectPics/about-us-banner.png);
+            color: #ffffff;
+            padding: 120px;
+        }
+        .ourStory {
+            display: flex;
+            justify-content: center;
+            font-size: 30px;
+            background-image: url(../images/projectPics/our-story-banner.png);
+            color: #ffffff;
+            padding: 120px;
+        }
+        .story {
+            line-height: 2;
+            font-size: 20px;
+            padding: 20px;
+        }
+        .oLetter {
+            display: inline;
+            font-size: 50px;
+            text-decoration: underline;
+        }
+        .story-o {
+            display: inline;
+        }
+        /*Page3 CSS*/
+        .mainflex img {
+            max-width: 500px;
         }
