--- a/projectWork/website-styles.css
+++ b/projectWork/website-styles.css
@@ -8,6 +8,11 @@
             border: rgb(13, 13, 85) dashed 1px;
             justify-content: space-between;
         }
+        .logoHeader {
+            max-width: 450px;
+            padding-left: 10px;
+            padding-top: 10px;
+        }
         .title {
             flex-wrap: wrap;
             max-width: 100%;
@@ -56,8 +61,11 @@
         @media only screen and (max-width: 1322px) {
             .righttop, .rightbot, .righttop2, .rightbot2 {
                 display: inline;
-                width: 30%;
                 margin: 0 auto;
+            }
+            .righttop img, .rightbot img, .righttop2 img, .rightbot2 img {
+                max-width: 100%;
+                padding: 20px;
             }
         }
         .welcome-section, .covered-section {
@@ -106,7 +114,14 @@
         }
         .gototop {
             padding: 10px;
-            padding-left: 45px;
+            padding-left: 40px;
+            padding-bottom: 20px;
+        }
+        .gttbutton {
+            border-radius: 12px;
+            font-size: 16px;
+            color: rgb(13, 13, 85);
+            border-color: rgb(13, 13, 85);
         }
         .info {
             padding: 10px;
@@ -196,6 +211,113 @@
             display: inline;
         }
         /*Page3 CSS*/
+        .portfolio {
+            flex-wrap: wrap;
+            text-align: center;
+            padding: 10px;
+        }
+        .portTitle {
+            display: block;
+            font-size: 30px;
+            text-decoration: underline;
+        }
+        .mainflex {
+            padding: 20px;
+        }
         .mainflex img {
-            max-width: 500px;
+            max-width: 100%;
+            width: 500px;
+            padding: 20px;
+        }
+        .row1, .row2, .row3, .row4, .row5{
+            display: flex;
+            justify-content: center;
+            max-width: 100%;
+        }
+        .row1 img, .row3 img, .row5 img, .row5 video{
+            width: 1000px;
+        }
+        video {
+            max-width: 100%;
+            height: auto;
+            padding: 20px;
+        }
+        
+        /*Slideshow CSS*/
+        * {box-sizing: border-box}
+        .mySlides {display: none}
+        img {vertical-align: middle;}
+
+        /* Slideshow container */
+        .slideshow-container {
+        max-width: 1500px;
+        position: relative;
+        margin: auto;
+        padding: 40px;
+        }
+
+        .slideshow-container img {
+        max-width: 100%;
+        }
+        /* Next & previous buttons */
+        .prev, .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -22px;
+        color: white;
+        border: red 1px;
+        font-weight: bold;
+        font-size: 18px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        }
+
+        /* Position the "next button" to the right */
+        .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+        }
+
+        /* On hover, add a black background color with a little bit see-through */
+        .prev:hover, .next:hover {
+        background-color: rgba(0,0,0,0.8);
+        }
+
+        /* The dots/bullets/indicators */
+        .dot {
+        cursor: pointer;
+        height: 55px;
+        width: 80px;
+        margin: 0 2px;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+        }
+
+        .active, .dot:hover {
+        box-shadow: #717171;
+        }
+
+        /* Fading animation */
+        .fade {
+        animation-name: fade;
+        animation-duration: 1.5s;
+        }
+        .thumbnails {
+            display: flex;
+            justify-content: center;
+            padding-bottom: 20px;
+            max-width: 100%;
+        }
+        @keyframes fade {
+        from {opacity: .4} 
+        to {opacity: 1}
+        }
+
+        /* On smaller screens, decrease text size */
+        @media only screen and (max-width: 300px) {
+        .prev, .next,.text {font-size: 11px}
         }
