--- a/projectWork/website-styles.css
+++ b/projectWork/website-styles.css
@@ -9,7 +9,8 @@
             justify-content: space-between;
         }
         .logoHeader {
-            max-width: 450px;
+            width: 450px;
+            max-width: 100%;
             padding-left: 10px;
             padding-top: 10px;
         }
@@ -36,6 +37,7 @@
             }
         .leftflex, .leftflex2 {
             max-width: 100%;
+            margin: 5px;
         }
         .righttop, .rightbot, .righttop2, .rightbot2 {
             display: flex;
@@ -60,12 +62,11 @@
         }
         @media only screen and (max-width: 1322px) {
             .righttop, .rightbot, .righttop2, .rightbot2 {
-                display: inline;
-                margin: 0 auto;
+                display: block;
+                padding-top: 10px;
             }
             .righttop img, .rightbot img, .righttop2 img, .rightbot2 img {
                 max-width: 100%;
-                padding: 20px;
             }
         }
         .welcome-section, .covered-section {
@@ -141,6 +142,9 @@
             float: left;
             padding-left: 20px;
         }
+        .nickImage img {
+            max-width: 100%;
+        }
         .nickInfo {
             padding-top: 15px;
         }
@@ -166,6 +170,19 @@
             padding-top: 20px;
             padding-right: 20px;
             padding-bottom: 30px;
+        }
+        .johnImage img {
+            max-width: 100%;
+        }
+        @media only screen and (max-width: 500px){
+            .johnImage, .nickImage {
+                float: none;
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+            .johnInfo {
+                padding-top: 0px;
+            }
         }
         .johnInfo {
             padding-top: 15px;
@@ -225,6 +242,7 @@
         .portTitle {
             display: block;
             font-size: 30px;
+            color: rgb(13, 13, 85);
             text-decoration: underline;
         }
         .mainflex {
@@ -247,6 +265,11 @@
             max-width: 100%;
             height: auto;
             padding: 20px;
+        }
+        @media only screen and (max-width: 500px) {
+            .row1, .row2, .row3, .row4, .row5 {
+                display: block;
+            }
         }
         
         /*Slideshow CSS*/
@@ -298,16 +321,22 @@
         /* The dots/bullets/indicators */
         .dot {
         cursor: pointer;
-        height: 55px;
-        width: 80px;
-        margin: 0 2px;
+        height: 15px;
+        width: 15px;
+        margin: 0 px;
         display: inline-block;
+        background-color: #bbb;
+        border-radius: 50%;
         transition: background-color 0.6s ease;
         }
-
-        .active, .dot:hover {
-        box-shadow: #717171;
+        .thumbnail {
+            cursor: pointer;
+            height: 55px;
+            width: 80px;
+            margin: 0 2px;
         }
+
+
 
         /* Fading animation */
         .fade {
@@ -320,12 +349,27 @@
             padding-bottom: 20px;
             max-width: 100%;
         }
+        #dots {
+            display: none;
+        }
         @keyframes fade {
         from {opacity: .4} 
         to {opacity: 1}
         }
 
         /* On smaller screens, decrease text size */
-        @media only screen and (max-width: 300px) {
-        .prev, .next,.text {font-size: 11px}
+        @media only screen and (max-width: 600px) {
+            .thumbnails{
+                display: none;
+            }
+            #dots{
+                display: flex;
+                justify-content: center;
+                padding-bottom: 20px;
+            }
+            .active, .dot:hover {
+                box-shadow: #717171;
+                background-color: #717171;
+                }
         }
+
