--- a/projectWork/website-styles.css
+++ b/projectWork/website-styles.css
@@ -258,7 +258,7 @@
                 display: flex;
                 justify-content: center;
                 font-size: 30px;
-                background-image: url(../images/projectPics/ourHouseBanner.jpg);
+                background-image: url(../images/projectPics/ourHouseBanner_500x250.jpeg);
                 color: #ffffff;
                 padding: 120px;
             }
